--- a/DEMO_Web_App.html
+++ b/DEMO_Web_App.html
@@ -16,11 +16,10 @@
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
   <p>
   SmartStation Controller<br>
   </p>
-  <p id="Text" >Click button below to change my text color.<br></p>
+  <p id="Text" >Click button below to change the text color.<br></p>
   <input type="button" value="click me" onclick="myFunction()" />
   
 	<script>
