--- a/DEMO_Web_App.html
+++ b/DEMO_Web_App.html
@@ -20,12 +20,14 @@
   SmartStation Controller<br>
   </p>
   <p id="Text" >Click button below to change the text color.<br></p>
-  <input type="button" value="click me" onclick="myFunction()" />
+  <input type="button" value="Change Color" onclick="myFunction()" />
   
+  <!--
 	<script>
 		function myFunction() {
 		document.getElementById("Text").style.color = "red";}
 	</script>
+	-->
 </body>
 
 </html>
