Added links for help pages

--- a/DEMO_Web_App.html
+++ b/DEMO_Web_App.html
@@ -17,17 +17,22 @@
 
 <body>
   <p>
-  SmartStation Controller<br>
+  SmartStation Controller<br><br>
+  Help links
   </p>
+  <a href="LED help page.html">LED<br></a>
+  <a href="IR help page.html">IR</a>
+
+
   <p id="Text" >Click button below to change the text color.<br></p>
   <input type="button" value="Change Color" onclick="myFunction()" />
   
   <!--
-	<script>
-		function myFunction() {
-		document.getElementById("Text").style.color = "red";}
-	</script>
-	-->
+  <script>
+    function myFunction() {
+    document.getElementById("Text").style.color = "red";}
+  </script>
+  -->
 </body>
 
 </html>
